# webview-apk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/app/webviewapk/: MainActivity.kt
examples/: gitmob.yaml
src/: webview_apk.py
templates/: app-build.gradle.kts.j2  settings.gradle.kts.j2  strings.xml.j2  themes.xml.j2
