[project]
name = "webview-apk"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["jinja2", "pyyaml", "pillow"]

[project.scripts]
webview-apk = "webview_apk:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["webview_apk"]

[tool.setuptools.package-dir]
"" = "src"
